welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:28: error: identifier expected but 'var' found.
def getMondeLargeur(var nb: Int, var T:Array)
                    ^Array1:62: error: ':' expected but '}' found.
}
^